react-front-end/src/App.css
.App {
  text-align: center;
  background-image: url('./assets/image_2.jpeg');
  /* background-image: url("https://soowood.co.jp/wp/wp-content/uploads/2019/12/AdobeStock_300572424-1024x683.jpeg");
  background-repeat: repeat-y;
  background-size: contain;*/
}

/* Where we user this?? */
.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

main.container {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  margin: auto;
}

div.plants {
  display: flex;
  flex-direction: column;
}

div.ui.list.plant-list {
  display: flex;
  flex-direction: column;
  margin: auto;
}

main.plant-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding-top: 25px;
  width: 95%;
  column-gap: 5%;
  margin: auto;
}

i.rain.icon,
i.book.icon,
i.sun.icon,
i.paw.icon,
i.world.icon,
i.lab.icon {
  font-size: 20px;
}

img.plant-photo {
  height: 80vh;
  border-radius: 5%;
}

div.ui.inverted.segment.navbar-segment {
  top: 0;
  position: fixed;
  width: 100%;
  height: 80px;
  opacity: 95%;
  z-index: 100;
}

div.plant-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-right: 5%;
}

img.plant-photo {
  margin-left: 5%;
  width: 90%;
  height: auto;
}

div.ui.list.wishlist-plant-info {
  display: flex;
  flex-direction: column;
  margin-left: 20px;
  width: 80%;
  margin: auto;
}

div.ui.grid {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  margin: auto;
}

div.ui.container {
  width: 100%;
  margin: auto;
}

div.ui.card.avatar {
  position: fixed;
}

div.ui.two.cards {
  width: 100%;
  margin: auto;
}

div.ui.container.profile,
div.ui.container.newsfeed,
div.ui.container.wishlist,
div.ui.container.app-container {
  width: 100%;
  height: 100%;
  margin-top: 78px;
  padding-top: 40px;
  padding-left: 20px;
  /* padding-bottom: 120px; */
}

div.ui.container.plant-page {
  width: 100%;
  height: 100%;
  margin-top: 78px;
  padding-top: 40px;
  padding-left: 20px;
  padding-bottom: 120px;
}

div.ui.video {
  position: fixed;
  width: 35%;
  height: auto;
}

div.ui.inverted.segment.navbar-segment {
  /* background-color: #395b3d; */
  background-image: linear-gradient(180deg, #395b3d, #5d8162, #395b3d);
}

div.plant-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

div.plant-name {
  display: flex;
  flex-direction: column;
  max-width: 100%;
  min-width: 100px;
  row-gap: 25px;
}

div.topic-ribbon {
  display: flex;
  flex-direction: column;
  max-width: 100%;
  min-width: 100px;
  row-gap: 25px;
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

.fadeOut {
  animation-name: fadeOut;
  animation-duration: 1s;
  animation-fill-mode: both;
  animation-delay: 3s;
}

div.ui.card.picture {
  width: 150px;
  height: auto;
  margin: 2%;
  padding: 2%;
  display: flex;
  flex-direction: row;
  align-content: auto;
  justify-content: space-between;
  background-color: rgb(250, 250, 250);
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
}

.ui.ribbon.label {
  font-size: 15px;
  width: 50%;
}

div.news-title {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-left: 10px;
}

div.wishlist-header {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: auto;
}

div.header-wishlist-plant {
  font-size: 16px;
}

div.ui.segment.profile {
  color: white;
  text-shadow: 2px 2px 2px #325036;
  background-color: rgba(225, 205, 48, 0.5);
  background-image: url(https://www.transparenttextures.com/patterns/asfalt-light.png);
}

